Rename password field from 'passwordPlain' to 'plainPassword'

--- a/src/main/resources/templates/adminRegister.html
+++ b/src/main/resources/templates/adminRegister.html
@@ -77,7 +77,7 @@ footer{
             <input class="grid-item" type="text" placeholder="First Name" th:field="*{fname}">
             <input class="grid-item" type="text" placeholder="Last Name" th:field="*{lname}">
             <input class="grid-item" type="email" placeholder="Email" th:field="*{email}">
-            <input class="grid-item" type="password" placeholder="Password" th:field="*{passwordPlain}">
+            <input class="grid-item" type="password" placeholder="Password" th:field="*{plainPassword}">
         </div>
 
         <input id="F" type="submit" value="Create Account">
