--- a/src/main/resources/templates/CV.html
+++ b/src/main/resources/templates/CV.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta charset="UTF-8">
     <title>CV Form</title>
     <link rel="stylesheet"
