--- a/src/main/resources/templates/InternMapSignUp.html
+++ b/src/main/resources/templates/InternMapSignUp.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Sign up </title>
-    <link rel="icon" type="image/png" href="/static/images/Logo Glass.png">
-    <link rel="icon" type="image/png" href="/static/images/Logo Glass.png">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" href="/static/InternSignUp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
