--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title> InternMap </title>
-    <link rel="icon" type="image/png" href="Logo Glass.png">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" th:href="@{/jobPosting.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
