--- a/src/main/resources/templates/adminRegister.html
+++ b/src/main/resources/templates/adminRegister.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Admin SignUp</title>
-    <link rel="icon" type="image/png" href="Logo Glass.png">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="InternMapSignUp.css">
+    <link rel="stylesheet" href="/static/InternSignUp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
