--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/Red Large Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/static/InternMapHomepage.css">
@@ -15,7 +16,7 @@
 </head>
 <body>
     <div class="container text-center mt-5">
-    <img id="logo" src="/images/Logo Glass.png" alt="This didn't load successfuly >:(" style="width: 156px; height: 156px;">
+    <img id="logo" src="/images/Logo%20Glass.png" alt="This didn't load successfuly >:(" style="width: 156px; height: 156px;">
     <div><h1 style="margin-top: -15px;:">404</h1> </div>
     </div>
     <div class="container text-center mt-3">
@@ -32,7 +33,7 @@
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
-                background: #1883fd;
+                background: #fd184d;
                 color: #ffffff;
 
             ">Home</button>
