--- a/src/main/resources/static/InternMapHomepage.css
+++ b/src/main/resources/static/InternMapHomepage.css
@@ -1,6 +1,5 @@
 header {
 
-
     #h1 {
         display: flex;
         flex-direction: row;
@@ -153,6 +152,14 @@ body {
 
     #roadmap-card-title {
         margin-top: -70px;
+    }
+
+    #grid-button-plus {
+        margin-left: 40%;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        border-radius: 40px;
     }
 
     .button-grid {
