--- a/src/main/resources/templates/Application.html
+++ b/src/main/resources/templates/Application.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Application</title>
-    <link rel="icon" type="image/png" th:href="@{/images/Logo Glass.png}">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" th:href="@{/InternMapSignIn.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
