--- a/src/main/resources/templates/InternMapSignUpchoice.html
+++ b/src/main/resources/templates/InternMapSignUpchoice.html
@@ -3,10 +3,9 @@
 
 <head>
     <title>InternMapSignUp</title>
-    <link rel="icon" type="image/png" href="/images/Logo Glass.png">
-
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="InternMapSignUpchoice.css">
+    <link rel="stylesheet" href="/static/InternMapSignUpchoice.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
