--- a/src/main/resources/templates/ViewApplicationDetail.html
+++ b/src/main/resources/templates/ViewApplicationDetail.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="'Applications for ' + ${jobPosting?.jobName ?: 'Job'}">Applications</title>
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="icon" type="image/png" th:href="@{/images/Logo Glass.png}">
     <link rel="stylesheet" th:href="@{/InternMapGeneral.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
