--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> InternMap </title>
-    <link rel="icon" type="image/png" href="/images/Logo Glass.png">
-    <link rel="icon" type="image/png" href="/images/Logo Glass.png">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" href="/static/InternMapHomepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,9 +70,7 @@
 <!--</div>-->
 <div class="button-grid">
     <a th:href="@{/roadmaps/new}"
-       class="grid-button"
-       style="cursor: pointer"
-       text="new roadmap"></a>
+       class="grid-button"><img src="/images/plus.png" alt="Create new Roadmap" width="46" height="46" id="grid-button-plus"></a>
     <a th:href="@{/roadmaps/{id}(id=${roadmap.roadmapID})}"
        class="grid-button"
        th:each="roadmap : ${roadmaps}"
