--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>InternMap - Login</title>
-    <link rel="icon" type="image/png" th:href="@{/images/Logo Glass.png}">
+    <title>Login</title>
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" th:href="@{/InternMapSignIn.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
