--- a/src/main/resources/templates/recruiter-jobpostings.html
+++ b/src/main/resources/templates/recruiter-jobpostings.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexible Table Design</title>
     <link rel="stylesheet" th:href="@{/tables.css}">
