--- a/src/main/resources/templates/roadmap/form.html
+++ b/src/main/resources/templates/roadmap/form.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Roadmap</title>
     <style>
