--- a/src/main/resources/templates/roadmap/view.html
+++ b/src/main/resources/templates/roadmap/view.html
@@ -333,9 +333,10 @@
 
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${roadmap.name}">Roadmap</title>
     <style>
