Massive code cleanup

--- a/src/main/resources/templates/InternMapSignUpchoice.html
+++ b/src/main/resources/templates/InternMapSignUpchoice.html
@@ -60,7 +60,7 @@
             <div class="flex-button">
                 <div class="vertical-container">
                     <img src="/images/server_rack.png" height="60" width="77" alt="Server Rack" style="margin-top: 15px;"/>
-                    <a style="margin-top: 14px">Admin</a>
+                    <abbr style="margin-top: 12px;">Admin</abbr>
                 </div>
             </div>
         </a>
