--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 
     <form th:action="@{/login}" th:object="${user}" method="post">
         <div th:if="${errorMessage}"
-             style="color:red;border:0 solid red;padding:2px;margin-bottom:5px;">
+             style="color:red;border:0 solid red;padding:2px;margin-bottom:5px; font-weight: 550;">
             <p th:text="${errorMessage}"></p></div>
         <div class="form-row">
         <div class="form-group">
