Homepage refinements and proper validation

--- a/src/main/resources/static/InternMapHomepage.css
+++ b/src/main/resources/static/InternMapHomepage.css
@@ -42,7 +42,7 @@ header {
                 color: #000000;
             }
 
-            #hb3 {
+            #hb3, #hb4 {
                 background: #1883fd;
                 color: #ffffff;
             }
