--- a/src/main/resources/templates/CompanyRegister.html
+++ b/src/main/resources/templates/CompanyRegister.html
@@ -72,7 +72,7 @@
             </div>
             <div class="form-group">
                 <label>
-                    <input type="url"
+                    <input type="text"
                            class="form-input"
                            th:field="*{location}"
                            placeholder="company location" />
