changed search by placeholder

--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -147,7 +147,7 @@
 <div class="search-action-container">
     <h1>All Job Postings</h1>
     <form th:action="@{/JobPostings/search(searchQuery=${searchQuery})}" method="post" class="search-form">
-            <input type="text" name="searchQuery" placeholder="Search by job title, date, or email" class="search-input"/>
+            <input type="text" name="searchQuery" placeholder="Search by company name or job title" class="search-input"/>
         <button type="submit" class="search-button">Search</button>
     </form>
 
