--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -4,6 +4,7 @@
     <title> InternMap </title>
     <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="stylesheet" th:href="@{/jobPosting.css}">
+    <link rel="stylesheet" href="/static/InternMapHomepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -125,24 +126,25 @@
     </style>
 </head>
 
-<header>
-    <div id="h1">
-        <div id="T1" class="box-title">
-            InternMap
-        </div>
-        <div id="s1" class="box-sign-buttons">
-            <button id="hb1"> Sign in</button>
-            <button id="hb2"> Sign up</button>
-        </div>
-    </div>
-    <div id="l1">
-            <img id="logo" th:src="@{/images/Logo Glass.png}" alt="Logo">
-        <span id="p1">InternMap</span>
-        <span id="p2">Welcome to the platform that sets your future for you</span>
-    </div>
-</header>
-<body>
+<!--<header>-->
+<!--    <div id="h1">-->
+<!--        <div id="T1" class="box-title">-->
+<!--            InternMap-->
+<!--        </div>-->
+<!--        <div id="s1" class="box-sign-buttons">-->
+<!--            <button id="hb1"> Sign in</button>-->
+<!--            <button id="hb2"> Sign up</button>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div id="l1">-->
+<!--            <img id="logo" th:src="@{/images/Logo Glass.png}" alt="Logo">-->
+<!--        <span id="p1">InternMap</span>-->
+<!--        <span id="p2">Welcome to the platform that sets your future for you</span>-->
+<!--    </div>-->
+<!--</header>-->
 
+<body>
+<header th:replace="~{fragments/indexHeader}"></header>
 <!-- Search and Action Section -->
 <div class="search-action-container">
     <h1>All Job Postings</h1>
