--- a/src/main/resources/static/jobPosting.css
+++ b/src/main/resources/static/jobPosting.css
@@ -1,11 +1,18 @@
 header {
 
+    width: auto;
+
     #h1 {
         display: flex;
         flex-direction: row;
         padding: 20px;
         justify-content: space-between;
         align-items: center;
+
+        .box-sign-buttons {
+            margin-right: 15px;
+            margin-left: auto;
+        }
 
         #T1 {
             color: #000;
@@ -17,10 +24,9 @@ header {
         }
 
         #s1 {
-            gap: 2px;
             display: flex;
 
-            #hb1, #hb2 {
+            #hb1, #hb2, #hb3, #hb4, #hb5 {
                 padding: 10px 20px;
                 border-radius: 34px;
                 border: none;
@@ -32,14 +38,19 @@ header {
                 line-height: normal;
             }
 
-            #hb1 {
+            #hb1, #hb6 {
                 background: transparent;
+                border: transparent;
                 color: #000000;
             }
 
-            #hb2 {
-                background: #2391FF;
-                color: #FFF;
+            #hb3, #hb4 {
+                background: #1883fd;
+                color: #ffffff;
+            }
+
+            #person-fill {
+                filter: invert(100%);
             }
         }
     }
@@ -82,19 +93,18 @@ header {
 }
 
 body {
-
     #bb1 {
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         display: flex;
         width: auto;
         padding-top: 60px;
         flex-direction: column;
         align-items: center;
-        gap: 36px;
+        gap: 26px;
 
         #bh {
             color: #000;
-            font-size: clamp(32px, 5vw , 56px);
+            font-size: clamp(32px, 5vw, 56px);
             font-style: normal;
             font-weight: 700;
             line-height: normal;
@@ -107,7 +117,7 @@ body {
             padding: 9px;
             border-color: transparent;
             border-radius: 60px;
-            background: rgba(239, 239, 239, 0.8);
+            background: rgba(246, 246, 246, 0.8);
 
             #bu1, #bu2 {
                 border-color: transparent;
@@ -124,6 +134,7 @@ body {
             #bu2 {
                 background: #ffffff;
                 border-radius: 34px;
+                cursor: initial;
                 color: rgba(0, 0, 0, 0.80);
             }
         }
@@ -148,6 +159,7 @@ body {
         font-style: normal;
         font-weight: 500;
         line-height: 17px; /* 130.769% */
+        padding-bottom: 18px;
     }
 
     #details {
@@ -155,6 +167,7 @@ body {
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
+        padding-bottom: 4px;
     }
 
     #separator {
@@ -210,35 +223,37 @@ body {
 
 footer {
     width: auto;
-    height: 300px;
-    background: linear-gradient(180deg, rgb(255, 255, 255) 15%, #3397FC 100%);
+    height: min-content;
+    background: linear-gradient(180deg, rgba(88, 171, 255, 0.60) 0%, #3397FC 100%);
+
+    .quick-links {
+        display: grid;
+        width: auto;
+        flex-direction: column;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        justify-items: center;
+        justify-content: space-around;
+    }
 
     #ft1 {
         text-align: start;
+        padding-top: 30px;
+        padding-left: clamp(2px, 10vw, 80px);
         text-shadow: 0 0 75px rgba(0, 0, 0, 0.25);
+        color: #FFFFFF;
         font-size: 64px;
-        font-style: normal;
         font-weight: 800;
-        line-height: normal;
-        background-clip: text;
         background: #FFFFFF;
         background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        display: flex;
-        width: 502px;
-        flex-direction: column;
-        justify-content: center;
-        aspect-ratio: 502.00/118.79;
     }
 
     #ft2 {
         color: #FFF;
-        font-size: 32px;
         font-style: normal;
-        font-weight: 800;
-        line-height: normal;
-        padding-left: 70px;
-        margin: 10px;
+        font-size: 28px;
+        line-height: 60px;
+        font-weight: 700;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
