--- a/src/main/resources/templates/fragments/indexFooter.html
+++ b/src/main/resources/templates/fragments/indexFooter.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>InternMap - Login</title>
-    <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <link rel="icon" type="image/png" th:href="@{/images/Logo Glass.png}">
-    <link rel="stylesheet" th:href="@{/InternMapSignIn.css}">
+    <link rel="stylesheet" th:href="@{/InternMapSignUpchoice.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<header th:fragment="header">
-    <div class="header-top">
-        <nav class="header-nav">
-            <a th:href="@{/login}">
-                <button class="btn-header primary">Sign in</button>
-            </a>
-        </nav>
+<footer>
+    <div>
+        <!--    <img id="footer-image" src="/images/Footer image.png">-->
+        <div id="footer">
+            <div id="ft1" class="box">
+                InternMap
+            </div>
+            <div id="ft2">
+                <ul class="quick-links">
+                    <li>Home</li>
+                    <li>RoadMaps</li>
+                    <li>JobPosting</li>
+                    <li>About us</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="header-hero">
-        <img class="logo" th:src="@{/images/Logo Glass.png}" alt="InternMap Logo">
-    </div>
-</header>
+</footer>
 </html>
