--- a/src/main/resources/templates/recruiter-jobpostings.html
+++ b/src/main/resources/templates/recruiter-jobpostings.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/images/Logo Glass Large.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexible Table Design</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+          rel="stylesheet">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+
+    <title>My job postings</title>
     <link rel="stylesheet" th:href="@{/tables.css}">
 
 
 </head>
 <body>
-<div class="container">
-    <div class="table-header">
-        <h2>My Job Postings</h2>
+<div class="container" style="border-radius: 48px;">
+    <div class="table-header" style="background: transparent">
+        <h2 style="font-weight: bold; font-size: 28px; color: black; border: none">My Job Postings</h2>
     </div>
 
-    <div class="table-wrapper">
-        <table class="table">
-            <thead>
+    <div class="table-wrapper" style="border: none">
+        <table class="table" style="border-radius: 48px; border: none">
+            <thead style="background: white">
             <tr>
                 <th>Job Title</th>
                 <th>Description</th>
@@ -31,7 +36,7 @@
                 <td th:text="${job.jobDescription}" data-label="Description"></td>
                 <td data-label="Applications">
                 <a th:href="@{/JobPostings/{id}/applications(id=${job.jobPostingUUID})}"
-                   class="btn btn-primary">
+                   class="btn btn-primary" style="border-radius: 24px;">
                     View Applications
                 </a>
                 </td>
@@ -44,8 +49,7 @@
             <tr>
                 <td colspan="3" style="border: none; padding: 0;">
                     <div class="empty-state">
-                        <h3>No job postings yet</h3>
-                        <p>Your job postings will appear here once you create them.</p>
+                        <h3>You haven't created any job postings to display.</h3>
                     </div>
                 </td>
             </tr>
