--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -239,10 +239,11 @@
             </div>
             <div id="ft2">
                 <ul class="quick-links">
-                    <li>Home</li>
-                    <li>RoadMaps</li>
-                    <li>JobPosting</li>
-                    <li>About us</li>
+                    <li>
+                        <a th:href="@{/}" >Home </a>
+                    </li>
+                    <li><a th:href="@{/roadmaps}" >RoadMaps</a></li>
+                    <li><a th:href="@{/JobPostings}" >JobPosting</a></li>
                 </ul>
             </div>
         </div>
