--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,21 +67,22 @@
 
 <br><br><br><br><br><br><br>
 <footer>
-<div>
-<!--    <img id="footer-image" src="/images/Footer image.png">-->
-    <div id="footer">
-    <div id="ft1" class="box">
-        InternMap
+    <div>
+        <!--    <img id="footer-image" src="/images/Footer image.png">-->
+        <div id="footer">
+            <div id="ft1" class="can-we-stop-with-the-boxes-please">
+                InternMap
+            </div>
+            <div id="ft2">
+                <ul class="quick-links">
+                    <li>
+                        <a th:href="@{/}" >Home </a>
+                    </li>
+                    <li><a th:href="@{/roadmaps}" >RoadMaps</a></li>
+                    <li><a th:href="@{/JobPostings}" >JobPosting</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div id="ft2">
-        <ul class="quick-links">
-            <li>Home</li>
-            <li>RoadMaps</li>
-            <li>JobPosting</li>
-            <li>About us</li>
-        </ul>
-    </div>
-</div>
-</div>
 </footer>
 </html>
