--- a/src/main/resources/templates/ViewApplicationDetail.html
+++ b/src/main/resources/templates/ViewApplicationDetail.html
@@ -230,6 +230,42 @@
                 text-align: center;
             }
         }
+        footer {
+            width: auto;
+            height: min-content;
+            background: linear-gradient(180deg, rgba(88, 171, 255, 0.60) 0%, #3397FC 100%);
+
+            .quick-links {
+                display: grid;
+                width: auto;
+                flex-direction: column;
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                justify-items: center;
+                justify-content: space-around;
+            }
+
+            #ft1 {
+                text-align: start;
+                padding-top: 30px;
+                padding-left: clamp(2px, 10vw, 80px);
+                text-shadow: 0 0 75px rgba(0, 0, 0, 0.25);
+                color: #FFFFFF;
+                font-size: 64px;
+                font-weight: 800;
+                background: #FFFFFF;
+                background-clip: text;
+            }
+
+            #ft2 {
+                color: #FFF;
+                font-style: normal;
+                font-size: 28px;
+                line-height: 60px;
+                font-weight: 700;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+        }
     </style>
 </head>
 
@@ -335,14 +371,21 @@
 
 <!-- Footer -->
 <footer>
-    <div class="footer-content">
-        <div class="footer-brand">InternMap</div>
-        <div class="footer-links">
-            <ul class="footer-nav">
-                <li><a th:href="@{/}">Home</a></li>
-                <li><a th:href="@{/JobPostings}">Job Postings</a></li>
-                <li>About us</li>
-            </ul>
+    <div>
+        <!--    <img id="footer-image" src="/images/Footer image.png">-->
+        <div id="footer">
+            <div id="ft1" class="can-we-stop-with-the-boxes-please">
+                InternMap
+            </div>
+            <div id="ft2">
+                <ul class="quick-links">
+                    <li>
+                        <a th:href="@{/}" >Home </a>
+                    </li>
+                    <li><a th:href="@{/roadmaps}" >RoadMaps</a></li>
+                    <li><a th:href="@{/JobPostings}" >JobPosting</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
