--- a/src/main/resources/templates/CompanyRegister.html
+++ b/src/main/resources/templates/CompanyRegister.html
@@ -58,7 +58,7 @@
                     <input type="text"
                            class="form-input"
                            th:field="*{industry}"
-                           placeholder="Industry (e.g., Technology, Finance)" />
+                           placeholder="Industry" />
                 </label>
             </div>
 
@@ -67,7 +67,7 @@
                     <input type="url"
                            class="form-input"
                            th:field="*{websiteURL}"
-                           placeholder="Website URL (e.g., https://example.com)" />
+                           placeholder="Company's website" />
                 </label>
             </div>
             <div class="form-group">
@@ -75,7 +75,7 @@
                     <input type="text"
                            class="form-input"
                            th:field="*{location}"
-                           placeholder="company location" />
+                           placeholder="Office address" />
                 </label>
             </div>
         </div>
