--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <div class="container text-center mt-5">
-    <img id="logo" src="/images/Logo%20Glass.png" alt="This didn't load successfuly >:(" style="width: 156px; height: 156px;">
-    <div><h1 style="margin-top: -15px;:">404</h1> </div>
+    <img id="logo" src="/images/Logo Glass (Red).png" alt="This didn't load successfuly >:(" style="width: 140px">
+    <div><h1 style="font-weight: bold;:">404</h1> </div>
     </div>
     <div class="container text-center mt-3">
     <span>We couldn't find the page you're looking for ☹️</span>
@@ -33,7 +33,7 @@
                 font-style: normal;
                 font-weight: 700;
                 line-height: normal;
-                background: #fd184d;
+                background: #fd183a;
                 color: #ffffff;
 
             ">Home</button>
