--- a/src/main/resources/templates/fragments/indexFooter.html
+++ b/src/main/resources/templates/fragments/indexFooter.html
@@ -15,15 +15,16 @@
     <div>
         <!--    <img id="footer-image" src="/images/Footer image.png">-->
         <div id="footer">
-            <div id="ft1" class="box">
+            <div id="ft1" class="can-we-stop-with-the-boxes-please">
                 InternMap
             </div>
             <div id="ft2">
                 <ul class="quick-links">
-                    <li>Home</li>
-                    <li>RoadMaps</li>
-                    <li>JobPosting</li>
-                    <li>About us</li>
+                    <li>
+                        <a onclick="location.href = '/'" style="cursor: pointer">Home </a>
+                    </li>
+                    <li><a onclick="location.href = '/'" style="cursor: pointer">RoadMaps</a></li>
+                    <li><a onclick="location.href = '/JobPostings'" style="cursor: pointer" >JobPostings</a></li>
                 </ul>
             </div>
         </div>
