--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,10 +76,10 @@
             <div id="ft2">
                 <ul class="quick-links">
                     <li>
-                        <a th:href="@{/}" >Home </a>
+                        <a onclick="location.href = '/'" style="cursor: pointer">Home </a>
                     </li>
-                    <li><a th:href="@{/roadmaps}" >RoadMaps</a></li>
-                    <li><a th:href="@{/JobPostings}" >JobPosting</a></li>
+                    <li><a onclick="location.href = '/'" style="cursor: pointer">RoadMaps</a></li>
+                    <li><a onclick="location.href = '/JobPostings'" style="cursor: pointer" >JobPostings</a></li>
                 </ul>
             </div>
         </div>
